# DIAD_Diffraction

./: .gitignore  README.md  WINDOWS_SETUP.txt  project_setup.py  pyproject.toml
data/: .gitignore  README.md
data/mg12123-1/nexus/: k11-66525.nxs  k11-66537.nxs
data/mg12123-1/nexus/k11-66525/: k11-66525-EtherCAT.h5  k11-66525-detectorPanda.h5  k11-66525-imaging.h5  k11-66525-pcompPanda.h5
data/mg12123-1/nexus/k11-66537/: k11-66537-EtherCAT.h5  k11-66537-detectorPanda.h5  k11-66537-imaging.h5  k11-66537-pcompPanda.h5
data/mg12123-1/processing/: output_Histograms.txt
notebooks/: ExampleNotebook_DiffractionDataAnalysis.ipynb  ExampleNotebook_DiffractionDataExplorer.ipynb  README.md  README_analysis.txt  README_explorer.txt
src/: main.py
src/diffraction_data_analysis_azimuthal/: __init__.py  diffraction_data_analysis_azimuthal.py
src/diffraction_data_explorer/: __init__.py  diffraction_data_explorer.py
tests/: Untitled.ipynb  test_smoke.py
