[project]
name = "diad_diffraction"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "pillow",
    "matplotlib",
    "ipyfilechooser",
    "h5py",
    "pandas",
    "ipympl",
    "ipywidgets",
    "scipy",
    "tifffile",
    "jupyterlab>=4.5.6",
    "imageio>=2.37.3",
]



[dependency-groups]
dev = [
  "ipykernel",
  "pytest",
  "ruff",
  "black"
]
